# zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  west.yml
arch/: Kconfig
boards/common/: e2-server-gdb.board.cmake  rfp-cli.board.cmake  rvlink.board.cmake
cmake/emu/: armfvp.cmake
cmake/modules/: FindBabbleSim.cmake  FindDtc.cmake  FindGnuLd.cmake  FindLlvmLld.cmake  Findarmclang.cmake  FindoneApi.cmake  boards.cmake  dts.cmake  extensions.cmake  git.cmake  hwm_v2.cmake  kconfig.cmake  python.cmake  shields.cmake  snippets.cmake  user_cache.cmake  variables.cmake  west.cmake  yaml.cmake  zephyr_default.cmake  zephyr_module.cmake
cmake/util/: execute_process.cmake
doc/: m5gfx_coreS3_spi.cpp  m5stack_core2_spi_comparison.md  m5stack_cores3_build_notes.md  m5stack_cores3_display_spi.md
doc/releases/: migration-guide-3.6.rst  migration-guide-3.7.rst  migration-guide-4.0.rst  migration-guide-4.1.rst  release-notes-4.0.rst  release-notes-4.1.rst
doc/tools/: check_dt_macros.py  (+1 more)
fsp_sample/: CMakeLists.txt
jam_demo/: prj.conf
minicart/: CMakeLists.txt  prj.conf
minicart_can/: prj.conf
modules/: Kconfig
samples/: index.rst
samples/boards/espressif/m5stack_cores3_spi_lcd_raw/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/boards/espressif/m5stack_cores3_spi_lcd_raw/boards/: m5stack_cores3.overlay
samples/boards/espressif/m5stack_cores3_spi_lcd_raw/src/: main.c
samples/shields/cqpub_pico_trainer/: CMakeLists.txt  prj.conf
scripts/: list_boards.py  list_hardware.py  west-commands.yml
submanifests/: gpl.yaml
(+1461 files in other folders)
